
set(PAM_BMC_SESSION pam_bmc_session)

file(GLOB SOURCES "*.c")
add_library(${PAM_BMC_SESSION} SHARED ${SOURCES})

target_include_directories(${PAM_BMC_SESSION}
    PUBLIC ${LUACLIB_SRC_DIR}
    PUBLIC ${GLIB_INCLUDE_DIRS}
)
target_link_libraries(${PAM_BMC_SESSION}
    PUBLIC ${GLIB_LIBRARIES}
    PUBLIC libmc4lua::libcutils
    PUBLIC liblogger::liblogger
)

set_target_properties(${PAM_BMC_SESSION} PROPERTIES PREFIX "")
if(ENABLE_TEST)
    install(TARGETS ${PAM_BMC_SESSION} DESTINATION usr/lib64 PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
else()
    install(TARGETS ${PAM_BMC_SESSION} DESTINATION opt/bmc/luaclib/account PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
endif()